--- a/src/html/tmpl/header.html
+++ b/src/html/tmpl/header.html
@@ -1,3 +1,3 @@
-<header>
-  header
-</header>
+<link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script src="/js/vendor/jquery.js"></script>
