checkbox almost done

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -46,85 +46,125 @@
             content
           </p>
           <form class="checkbox">
-              <ul class="checkbox__list">
-                <li class="checkbox__item">
-                  <i class="material-icons chevron">chevron_right</i>
-                  <label class="checkbox__label" for="check-all">
-                    <input class="checkbox__input" type="checkbox" id="check-all">
-                    <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                    <span class="checkbox__text">
-                      Все
-                    </span>
-                  </label>
-                  <div class="submenu">
-                      <ul class="checkbox__list">
-                          <li class="checkbox__item">
-                            <label class="checkbox__label" for="check-all-2">
-                              <input class="checkbox__input" type="checkbox" id="check-all-2">
-                              <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                              <span class="checkbox__text">
-                                Все
-                              </span>
-                            </label>
-                          </li>
-                          <li class="checkbox__item">
-                            <label class="checkbox__label" for="check-item-11">
-                              <input class="checkbox__input" checked="" type="checkbox" id="check-item-11">
-                              <i class="checkbox__icon material-icons">check_box</i>
-                              <span class="checkbox__text">
-                                Маркированный, нумерованный списки.
-                              </span>
-                            </label>
-                          </li>
-                          <li class="checkbox__item">
-                            <label class="checkbox__label" for="check-item-12">
-                              <input class="checkbox__input" type="checkbox" id="check-item-12">
-                              <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                              <span class="checkbox__text">
-                                Гиперссылки
-                              </span>
-                            </label>
-                          </li>
-                          <li class="checkbox__item">
-                            <label class="checkbox__label" for="check-item-13">
-                              <input class="checkbox__input" type="checkbox" id="check-item-13">
-                              <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                              <span class="checkbox__text">
-                                Чек-листы
-                              </span>
-                            </label>
-                          </li>
-                  </div>
-                </li>
-                <li class="checkbox__item">
-                  <label class="checkbox__label" for="check-item-1">
-                    <input class="checkbox__input" checked="" type="checkbox" id="check-item-1">
-                    <i class="checkbox__icon material-icons">check_box</i>
-                    <span class="checkbox__text">
-                      Маркированный, нумерованный списки.
-                    </span>
-                  </label>
-                </li>
-                <li class="checkbox__item">
-                  <label class="checkbox__label" for="check-item-2">
-                    <input class="checkbox__input" type="checkbox" id="check-item-2">
-                    <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                    <span class="checkbox__text">
-                      Гиперссылки
-                    </span>
-                  </label>
-                </li>
-                <li class="checkbox__item">
-                  <label class="checkbox__label" for="check-item-3">
-                    <input class="checkbox__input" type="checkbox" id="check-item-3">
-                    <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                    <span class="checkbox__text">
-                      Чек-листы
-                    </span>
-                  </label>
-                </li>
+            <ul class="checkbox__list">
+              <li class="checkbox__item">
+                <i class="material-icons chevron">chevron_right</i>
+                <label class="checkbox__label" for="check-all">
+                  <input class="checkbox__input" type="checkbox" id="check-all">
+                  <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                  <span class="checkbox__text">
+                    Все
+                  </span>
+                </label>
+                <div class="submenu">
+                  <ul class="checkbox__list">
+                    <li class="checkbox__item">
+                      <label class="checkbox__label" for="check-all-2">
+                        <input class="checkbox__input" type="checkbox" id="check-all-2">
+                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                        <span class="checkbox__text">
+                          пункт
+                        </span>
+                      </label>
+                    </li>
+                    <li class="checkbox__item">
+                      <label class="checkbox__label" for="check-item-11">
+                        <input class="checkbox__input" checked="" type="checkbox" id="check-item-11">
+                        <i class="checkbox__icon material-icons">check_box</i>
+                        <span class="checkbox__text">
+                          Маркированный, нумерованный списки.
+                        </span>
+                      </label>
+                    </li>
+                    <li class="checkbox__item">
+                      <label class="checkbox__label" for="check-item-12">
+                        <input class="checkbox__input" type="checkbox" id="check-item-12">
+                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                        <span class="checkbox__text">
+                          Гиперссылки
+                        </span>
+                      </label>
+                    </li>
+                    <li class="checkbox__item">
+                      <label class="checkbox__label" for="check-item-13">
+                        <input class="checkbox__input" type="checkbox" id="check-item-13">
+                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                        <span class="checkbox__text">
+                          Чек-листы
+                        </span>
+                      </label>
+                    </li>
+                </div>
+              </li>
+              <li class="checkbox__item">
+                <label class="checkbox__label" for="check-item-1">
+                  <input class="checkbox__input" checked="" type="checkbox" id="check-item-1">
+                  <i class="checkbox__icon material-icons">check_box</i>
+                  <span class="checkbox__text">
+                    Маркированный, нумерованный списки.
+                  </span>
+                </label>
+              </li>
+              <li class="checkbox__item">
+                <label class="checkbox__label" for="check-item-2">
+                  <input class="checkbox__input" type="checkbox" id="check-item-2">
+                  <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                  <span class="checkbox__text">
+                    Гиперссылки
+                  </span>
+                </label>
+              </li>
+              <li class="checkbox__item">
+                <i class="material-icons chevron">chevron_right</i>
+                <label class="checkbox__label" for="check-all-3">
+                  <input class="checkbox__input" type="checkbox" id="check-all-3">
+                  <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                  <span class="checkbox__text">
+                    Чек-листы
+                  </span>
+                </label>
+                <div class="submenu">
+                  <ul class="checkbox__list">
+                    <li class="checkbox__item">
+                      <label class="checkbox__label" for="check-item-111">
+                        <input class="checkbox__input" type="checkbox" id="check-item-111">
+                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                        <span class="checkbox__text">
+                          Все
+                        </span>
+                      </label>
+                    </li>
+                    <li class="checkbox__item">
+                      <label class="checkbox__label" for="check-item-112">
+                        <input class="checkbox__input" checked="" type="checkbox" id="check-item-112">
+                        <i class="checkbox__icon material-icons">check_box</i>
+                        <span class="checkbox__text">
+                          Маркированный, нумерованный списки.
+                        </span>
+                      </label>
+                    </li>
+                    <li class="checkbox__item">
+                      <label class="checkbox__label" for="check-item-113">
+                        <input class="checkbox__input" type="checkbox" id="check-item-113">
+                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                        <span class="checkbox__text">
+                          Гиперссылки
+                        </span>
+                      </label>
+                    </li>
+                    <li class="checkbox__item">
+                      <label class="checkbox__label" for="check-item-114">
+                        <input class="checkbox__input" type="checkbox" id="check-item-114">
+                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                        <span class="checkbox__text">
+                          Чек-листы
+                        </span>
+                      </label>
+                    </li>
+                </div>
+              </li>
               </ul>
-            </form>
+          </form>
         </div>
       </div>
     </div>
