--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,174 +2,63 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Postcss</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  @@include('head.html')
+  <title>Steps</title>
 </head>
 
 <body>
   @@include('header.html')
+  <div class="container">
+    <div class="wr">
+      <header class="title">
+        Создание / настройка (проекта, прогноза, контент плана)
+      </header>
+    </div>
+    <div class="wr">
 
-  <div class="accordion">
-    <div class="accordion-row">
-      <div class="accordion-header">
-        Header
-        <i class="material-icons expand">expand_more</i>
-      </div>
-      <div class="accordion-content">
-        <div class="wr">
-          <p>
-            content
-          </p>
-          <br />
-          <p>
-            content
-          </p>
-          <input type="checkbox">
+      <section class="domain">
+        <div class="subtitle">
+          Введите свой домен для анализа
         </div>
-      </div>
-    </div>
-    <div class="accordion-row open">
-      <div class="accordion-header">
-        Header
-        <i class="material-icons expand">expand_more</i>
-      </div>
-      <div class="accordion-content">
-        <div class="wr">
-          <p>
-            content
-          </p>
-          <br />
-          <p>
-            content
-          </p>
-          <form class="checkbox">
-            <ul class="checkbox__list">
-              <li class="checkbox__item">
-                <i class="material-icons chevron">chevron_right</i>
-                <label class="checkbox__label" for="check-all">
-                  <input class="checkbox__input" type="checkbox" id="check-all">
-                  <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                  <span class="checkbox__text">
-                    Все
-                  </span>
-                </label>
-                <div class="submenu">
-                  <ul class="checkbox__list">
-                    <li class="checkbox__item">
-                      <label class="checkbox__label" for="check-all-2">
-                        <input class="checkbox__input" type="checkbox" id="check-all-2">
-                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                        <span class="checkbox__text">
-                          пункт
-                        </span>
-                      </label>
-                    </li>
-                    <li class="checkbox__item">
-                      <label class="checkbox__label" for="check-item-11">
-                        <input class="checkbox__input" checked="" type="checkbox" id="check-item-11">
-                        <i class="checkbox__icon material-icons">check_box</i>
-                        <span class="checkbox__text">
-                          Маркированный, нумерованный списки.
-                        </span>
-                      </label>
-                    </li>
-                    <li class="checkbox__item">
-                      <label class="checkbox__label" for="check-item-12">
-                        <input class="checkbox__input" type="checkbox" id="check-item-12">
-                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                        <span class="checkbox__text">
-                          Гиперссылки
-                        </span>
-                      </label>
-                    </li>
-                    <li class="checkbox__item">
-                      <label class="checkbox__label" for="check-item-13">
-                        <input class="checkbox__input" type="checkbox" id="check-item-13">
-                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                        <span class="checkbox__text">
-                          Чек-листы
-                        </span>
-                      </label>
-                    </li>
-                </div>
-              </li>
-              <li class="checkbox__item">
-                <label class="checkbox__label" for="check-item-1">
-                  <input class="checkbox__input" checked="" type="checkbox" id="check-item-1">
-                  <i class="checkbox__icon material-icons">check_box</i>
-                  <span class="checkbox__text">
-                    Маркированный, нумерованный списки.
-                  </span>
-                </label>
-              </li>
-              <li class="checkbox__item">
-                <label class="checkbox__label" for="check-item-2">
-                  <input class="checkbox__input" type="checkbox" id="check-item-2">
-                  <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                  <span class="checkbox__text">
-                    Гиперссылки
-                  </span>
-                </label>
-              </li>
-              <li class="checkbox__item">
-                <i class="material-icons chevron">chevron_right</i>
-                <label class="checkbox__label" for="check-all-3">
-                  <input class="checkbox__input" type="checkbox" id="check-all-3">
-                  <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                  <span class="checkbox__text">
-                    Чек-листы
-                  </span>
-                </label>
-                <div class="submenu">
-                  <ul class="checkbox__list">
-                    <li class="checkbox__item">
-                      <label class="checkbox__label" for="check-item-111">
-                        <input class="checkbox__input" type="checkbox" id="check-item-111">
-                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                        <span class="checkbox__text">
-                          Все
-                        </span>
-                      </label>
-                    </li>
-                    <li class="checkbox__item">
-                      <label class="checkbox__label" for="check-item-112">
-                        <input class="checkbox__input" checked="" type="checkbox" id="check-item-112">
-                        <i class="checkbox__icon material-icons">check_box</i>
-                        <span class="checkbox__text">
-                          Маркированный, нумерованный списки.
-                        </span>
-                      </label>
-                    </li>
-                    <li class="checkbox__item">
-                      <label class="checkbox__label" for="check-item-113">
-                        <input class="checkbox__input" type="checkbox" id="check-item-113">
-                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                        <span class="checkbox__text">
-                          Гиперссылки
-                        </span>
-                      </label>
-                    </li>
-                    <li class="checkbox__item">
-                      <label class="checkbox__label" for="check-item-114">
-                        <input class="checkbox__input" type="checkbox" id="check-item-114">
-                        <i class="checkbox__icon material-icons">check_box_outline_blank</i>
-                        <span class="checkbox__text">
-                          Чек-листы
-                        </span>
-                      </label>
-                    </li>
-                </div>
-              </li>
-              </ul>
-          </form>
+        <form action="" class="form-default">
+          <input type="text" placeholder="Введите домен" class="text-input" />
+          <input type="submit" class="button button_blue" value="ДОБАВИТЬ" />
+        </form>
+      </section>
+      <section class="domain-competitors">
+        <div class="subtitle">
+          Введите домены конкурентов для анализа
         </div>
-      </div>
+        @@include('competitors.html')
+      </section>
+
+      <section class="keywords">
+        <div class="subtitle">
+          Добавьте ключевые слова для анализа
+        </div>
+        <form action="" class="form-default">
+          <input type="text" placeholder="Введите домен" class="text-input" />
+          <input type="submit" class="button button_blue" value="ДОБАВИТЬ" />
+          <div class="upload-box">
+            <input type="file" name="file-key" id="file-key" class="inputfile inputfile-3" multiple />
+            <label for="file-key">
+              <span>Импорт</span>
+            </label>
+          </div>
+        </form>
+      </section>
+
+      <section class="niche">
+        <div class="subtitle">
+          Или выбрать нишу
+        </div>
+        @@include('accordion.html')
+
+
+      </section>
     </div>
+
   </div>
-  <!-- end of container -->
 
   @@include('footer.html')
 </body>
