--- a/src/html/table.html
+++ b/src/html/table.html
@@ -3,30 +3,32 @@
 
 <head>
   @@include('head.html')
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
-  <title>Steps</title>
+  <title>Table</title>
 </head>
 
 <body>
-  @@include('header.html')
-  <div class="container">
-    <div class="wr">
-      <header class="title">
-        Создание / настройка (проекта, прогноза, контент плана)
-      </header>
-    </div>
-    <div class="wr">
-      <section class="data-table">
-        @@include('data-table.html')
-      </section>
-    </div>
+  <div class="wr">
+    <header class="title">
+      Создание / настройка (проекта, прогноза, контент плана)
+    </header>
 
+    @@include('header.html')
+
+    <section class="data-table">
+      <header class="subtitle">
+        Анализ домена:
+        <span> www.blabla.com </span>
+      </header>
+
+      @@include('data-table.html')
+    </section>
   </div>
 
+
   @@include('footer.html')
-  <script src="/js/vendor/datatables.js"></script>
-  <script src="/js/vendor/materialize.js"></script>
-  <script src="/js/table.js"></script>
+  <script src="js/vendor/datatables.js"></script>
+  <script src="js/vendor/materialize.js"></script>
+  <script src="js/table.js"></script>
 </body>
 
 </html>
