--- a/src/html/tmpl/competitors.html
+++ b/src/html/tmpl/competitors.html
@@ -1,4 +1,15 @@
 <form action="" class="checkbox zebra-form">
+  <div class="checkbox__item">
+    <div class="checkbox__label" >
+      Домен
+    </div>
+    <div class="amount">
+      Количество
+    </div>
+    <div class="weight">
+      Total weight
+    </div>
+  </div>
   <ul class="checkbox__list zebra-list">
     <li class="checkbox__item">
       <label class="checkbox__label" for="check-item-domain-1">
@@ -8,6 +19,12 @@
           Content.guru
         </span>
       </label>
+      <div class="amount">
+        159176
+      </div>
+      <div class="weight">
+        268411632
+      </div>
     </li>
     <li class="checkbox__item">
       <label class="checkbox__label" for="check-item-domain-2">
