--- a/src/html/tmpl/head.html
+++ b/src/html/tmpl/head.html
@@ -4,5 +4,5 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&amp;subset=cyrillic" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="/js/vendor/jquery.js"></script>
-<link rel="stylesheet" href="/css/styles.css">
+<script src="js/vendor/jquery.js"></script>
+<link rel="stylesheet" href="css/styles.css">
