--- a/src/html/tmpl/data-table.html
+++ b/src/html/tmpl/data-table.html
@@ -21,14 +21,34 @@
         </thead>
         <tbody>
           <tr>
-            <td>Google Play назвал самые популярные приложения 2017 года в России</td>
+            <td>
+              <div class="checkbox__item"> 
+                <label class="checkbox__label" for="check-item-table-1">
+                  <input class="checkbox__input" type="checkbox" id="check-item-table-1">
+                  <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                  <span class="checkbox__text">
+                    Google Play назвал самые популярные приложения 2017 года в России
+                  </span>
+                </label>
+              </div>
+            </td>
             <td>2 360</td>
             <td>1240</td>
             <td>Категории</td>
             <td>Black lights</td>
           </tr>
           <tr>
-            <td>Сервис рекламы Google AdSense будет сам выбирать место для размещения контента</td>
+            <td>
+                <div class="checkbox__item"> 
+                    <label class="checkbox__label" for="check-item-table-2">
+                      <input class="checkbox__input" type="checkbox" id="check-item-table-2">
+                      <i class="checkbox__icon material-icons">check_box_outline_blank</i>
+                      <span class="checkbox__text">
+                        Сервис рекламы Google AdSense будет сам выбирать место для размещения контента
+                      </span>
+                    </label>
+                  </div>
+              </td>
             <td>2 360</td>
             <td>1240</td>
             <td>Категории</td>
