--- a/src/html/tmpl/footer.html
+++ b/src/html/tmpl/footer.html
@@ -1,6 +1,6 @@
 <footer>
-  <svg class="circular" height="50" width="50">
+  <!-- <svg class="circular" height="50" width="50">
     <circle class="path" cx="25" cy="25.2" r="19.9" fill="none" stroke-width="6" stroke-miterlimit="10" />
-  </svg>
+  </svg> -->
   <script src="js/main.js"></script>
 </footer>
