--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,154 @@
   <title>Postcss</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
   @@include('header.html')
-  <h1>
-    title
-  </h1>
-  
+  <div class="body-content">
+    <div class="note__body">
+      <div class="vd-comments">
+        <div class="vd-comments__header">
+          <div class="vd-comments__all">
+            25 комментариев
+          </div>
+
+          <div class="vd-comments__login">
+            Войти с помощью
+            <div class="social">
+
+            </div>
+          </div>
+        </div>
+
+        <div class="vd-comments__body">
+          <div class="vd-comments-card">
+            <img class="vd-comments-card__photo" src="/i/coment-default.png" alt="" />
+            <div class="vd-comments-card__content">
+              <div class="vd-comments-card__info">
+                <div class="vd-comments-card__author">
+                  Игорь Дмитриев
+                  <time class="vd-comments-card__time">
+                    вчера 16:56
+                  </time>
+                </div>
+                <div class="vd-comments-card-vote">
+                  <div class="vd-comments-card-vote__minus">
+                    <i class="minus"></i>
+                  </div>
+                  <div class="vd-comments-card-vote__count">
+                    14
+                  </div>
+                  <div class="vd-comments-card-vote__plus">
+                      <i class="plus"></i>
+                  </div>
+                </div>
+              </div>
+              <div class="vd-comments__text">
+                опять эти мифические токсичные сотрудники, которые лизоблюдят и разводят интриги день деньской напропалую. за 11 лет работы
+                в разных ит компаниях ни разу таких не встречала. а вот любителей нанять студента за 300$ и что б он вкалывал
+                за троих - дофига много раз. и когда ты наконец понимаешь, что тебя жестко нае** - внезапно, ты токсичен
+                и нам увы не по пути, у компании и у тебя разные цели, ведь ты хочешь денег, а мы тут все за идею!
+              </div>
+              <div class="vd-comments__answer">
+                Ответить
+              </div>
+            </div>
+
+          </div>
+          <div class="vd-comments-reply">
+            <div class="vd-comments-reply__info">
+              Вы вошли как <a href="#">Serg Pertov</a> <a href="#">| Выйти</a> 
+            </div>
+            <div class="vd-comments-reply__textarea">
+              <textarea class="" name="" id="" cols="30" rows="10"></textarea>
+              <input type="submit" value="ОТПРАВИТЬ" />
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <aside>
+      <div class="vd-tab__title">
+        Топ комментариев
+      </div>
+      <div class="vd-tab">
+        <ul class="vd-tabs">
+          <li>
+            <a href="#">Дня</a>
+          </li>
+          <li>
+            <a href="#">Недели</a>
+          </li>
+          <li>
+            <a href="#">Месяца</a>
+          </li>
+        </ul>
+
+        <div class="vd-tab__content">
+
+          <div class="vd-tabs__item">
+            <div class="vd-tabs-card">
+              <header>
+                <img src="/i/top-comments.png" alt="">
+                <p>Сергей Михайлов
+                  <time>вчера 16:56</time>
+                </p>
+
+              </header>
+              <p class="vd-tabs-card__text">Согласен с коллегой) половина этих контор, если не все пла…</p>
+              <a href="#" class="vd-tabs-card__link">«Не могу смотреть без слёз»: Артемий Лебедев раскритиковал редизайн придуманного им бренда «Фруктовичи»</a>
+            </div>
+            <div class="vd-tabs-card">
+              <header>
+                <img src="/i/top-comments.png" alt="">
+                <p>Сергей Михайлов
+                  <time>вчера 16:56</time>
+                </p>
+              </header>
+              <p class="vd-tabs-card__text">Согласен</p>
+              <a href="#" class="vd-tabs-card__link">«Не могу смотреть без слёз»: Артемий Лебедев раскритиковал редизайн придуманного им бренда «Фруктовичи»</a>
+            </div>
+          </div>
+          <div class="vd-tabs__item">
+            <div class="vd-tabs-card">
+              <header>
+                <img src="/i/top-comments.png" alt="">
+                <p>Сергей Михайлов
+                  <time>вчера 16:56</time>
+                </p>
+              </header>
+              <p class="vd-tabs-card__text">Согласен</p>
+              <a href="#" class="vd-tabs-card__link">«Не могу смотреть без слёз»: Артемий Лебедев раскритиковал редизайн придуманного им бренда «Фруктовичи»</a>
+            </div>
+          </div>
+          <div class="vd-tabs__item">
+            <div class="vd-tabs-card">
+              <header>
+                <img src="/i/top-comments.png" alt="">
+                <p>Сергей Михайлов
+                  <time>вчера 16:56</time>
+                </p>
+              </header>
+              <p class="vd-tabs-card__text">Согласен</p>
+              <a href="#" class="vd-tabs-card__link">«Не могу смотреть без слёз»: Артемий Лебедев раскритиковал редизайн придуманного им бренда «Фруктовичи»</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </aside>
+
+  </div>
+
+
   @@include('footer.html')
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
 
   <script src="/js/main.js"></script>
 </body>
+
 </html>
