--- a/src/html/tmpl/footer.html
+++ b/src/html/tmpl/footer.html
@@ -1,3 +1,15 @@
-<footer>
-  footer
-</footer>
+<div class="vd-modal">
+    <div class="vd-modal__box">
+      <p class="vd-modal__title">header</p>
+  
+      <form class="vd-modal-form" action="">
+        <label for="email">
+          <input type="text" name="email" placeholder="email" />
+        </label>
+        <label for="password">
+          <input type="text" name="email" placeholder="password" />
+        </label>
+        <input type="submit" value="Send" />
+      </form>
+    </div>
+  </div>
