--- a/src/html/tmpl/header.html
+++ b/src/html/tmpl/header.html
@@ -1,3 +1,76 @@
-<header>
-  header
+<header class="glheader" role="banner">
+  <div class="container">
+    <div class="row no-gutters justify-content-center">
+      <div class="col col-xl-8 " id="vd-header">
+        <div class="vd-logo">
+          <a href="https://coinmania.com" class="logo glheader__logo" rel="home" itemprop="url">
+            <img width="842" height="250" src="/i/logo.svg" class="logo__img" alt="">
+          </a>
+        </div>
+        <div class="glheader__coins vd-cons">
+          <ul class="coins">
+            <li class="coins__item">
+              <span class="name">BTC</span>
+              <span class="change-down">-4.8%</span>
+              <div class="price">$ 7251.15</div>
+            </li>
+            <li class="coins__item">
+              <span class="name">ETH</span>
+              <span class="change-up">5.63%</span>
+              <div class="price">$ 569.791</div>
+            </li>
+            <li class="coins__item">
+              <span class="name">XRP</span>
+              <span class="change-down">-6.95%</span>
+              <div class="price">$ 0.620982</div>
+            </li>
+            <li class="coins__item">
+              <span class="name">BCH</span>
+              <span class="change-down">-7.88%</span>
+              <div class="price">$ 1027.4</div>
+            </li>
+            <li class="coins__item">
+              <span class="name">EOS</span>
+              <span class="change-down">-8.96%</span>
+              <div class="price">$ 13.0632</div>
+            </li>
+          </ul>
+        </div>
+        <div class="vd-search">
+          <form role="search" method="get" class="search-form">
+            <label for="search-form-5b1d9419eef7a">
+              <span class="screen-reader-text">Искать:</span>
+            </label>
+            <input type="search" id="search-form-5b1d9419eef7a" class="search-field" placeholder="Поиск…" value="" name="s" />
+
+
+            <button type="submit" class="search-submit">
+              <img src="/i/search-black.svg" class="vd-search__icon" alt="">
+            </button>
+            <div class="search-field-control"></div>
+            </button>
+          </form>
+        </div>
+      </div>
+      <div class="col-xl-3 col-xxl-2">
+        <div class="vd-lang">
+          <div class="vd-lang__icon">
+           <img src="/i/language-icon.svg" alt="">
+          </div>
+          <div class="vd-lang__current">
+            Rus
+            <div class="vd-lang-box">
+              <a href="" class="vd-lang__ru">Rus</a>
+              <a href="" class="vd-lang__en">Eng</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="vd-login">
+          <a href="#" class="registration">Регистрация</a> |
+          <a href="#" class="signin-open">Войти</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
