--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,18 @@
   <title>Postcss</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
   @@include('header.html')
   <h1>
     title
   </h1>
-  
+
+  <!-- <div class="svg-arrow-2 svg-arrow-2-dims"></div> -->
+
   @@include('footer.html')
 
   <script src="/js/main.js"></script>
 </body>
+
 </html>
